1999-07-15  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/cmdline.c (skip_to): Don't increase CMDLINE if the
	character to which CMDLINE points is NUL.

	* stage2/Makefile.am (EXTRA_DIST): Removed smp-imps.c.
	(stage2_exec_SOURCES): Added smp-imps.c.
	* stage2/cmdline.c [!GRUB_UTIL] (IMPS_DEBUG) (KERNEL_PRINT)
	(CMOS_WRITE_BYTE) (CMOS_READ_BYTE) (PHYS_TO_VIRTUAL)
	(VIRTUAL_TO_PHYS) (inb) (outb) (cmos_write_byte)
	(cmos_read_byte): These are now defined in ...
	* stage2/smp-imps.c (IMPS_DEBUG) (KERNEL_PRINT)
	(CMOS_WRITE_BYTE) (CMOS_READ_BYTE) (PHYS_TO_VIRTUAL)
	(VIRTUAL_TO_PHYS) (inb) (outb) (cmos_write_byte)
	(cmos_read_byte): ... here.
	* stage2/cmdline.c [!GRUB_UTIL]: Include apic.h and smp-imps.h.
	
1999-07-14  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	The function ungetch is simulated so that the user can use a
	buggy curses.
	
	* grub/asmstub.c [HAVE_LIBCURSES] (save_char): New variable.
	(getkey) [HAVE_LIBCURSES]: If SAVE_CHAR is not ERR, return
	SAVE_CHAR and clear it.
	(checkkey) [HAVE_LIBCURSES]: If SAVE_CHAR is not ERR, return
	SAVE_CHAR. If C is not ERR, set SAVE_CHAR to C.
	
1999-07-14  Pavel Roskin  <pavel_roskin@geocities.com>

	* stage2/char_io.c (get_cmdline) [GRUB_UTIL]: Recognize
	backspace when ncurses fails to do this.

	* grub/asmstub.c (grub_stage2) [HAVE_LIBCURSES]: Call wtimeout
	instead of nodelay.
	(getkey) [HAVE_LIBCURSES]: Likewise.
	
1999-07-14  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage1/stage1_lba.S (probe_values): New variable. This is not
	used actually, but prevents `install' command from failing
	bogusly.
	
1999-07-14  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>
	
	All constants in stage1s are moved to stage1.h and renamed
	appropriately, and include stage1.h instead.
	
	* grub/Makefile.am (AM_CFLAGS): Added the include path to stage1.
	* stage2/Makefile.am (INCLUDES): New variable.
	* stage1/Makefile.am (stage1_exec_SOURCES): Added stage1.h
	(stage1_lba_exec_SOURCES): Likewise.